Sample component and dataset info view

--- a/Front/src/app/shared/components/layouts/admin-layout-sidebar-large/header-sidebar-large/header-sidebar-large.component.html
+++ b/Front/src/app/shared/components/layouts/admin-layout-sidebar-large/header-sidebar-large/header-sidebar-large.component.html
@@ -1,6 +1,6 @@
 <div (mouseenter)="closeNavChild()" class="main-header">
     <div class="logo">
-        <a [routerLink]="['/meters/all']"><img alt="" src="./assets/images/logo.png"></a>
+        <a [routerLink]="['/datasets']"><img alt="" src="./assets/images/logo.png"></a>
     </div>
 
     <div (click)="toggelSidebar()" class="menu-toggle">
