--- a/Front/src/app/shared/components/dataset-table/dataset-table.component.html
+++ b/Front/src/app/shared/components/dataset-table/dataset-table.component.html
@@ -40,7 +40,7 @@
         >
             <ng-template let-collumn="collumn"
                          ngx-datatable-header-template>
-                <button
+                <button (click)="clean();open(addDataset)"
                         [title]="'Cadastrar medidor'"
                         class="btn btn-success"
                         style=" width:-webkit-fill-available;"><a
@@ -50,6 +50,7 @@
                 <div  class="row text-center">
                     <div class="col-sm-6">
                         <button
+                                [routerLink]="['/datasets',row.id]"
                                 [title]="'visualizar informações do dataset - '+row.name"
                                 class="btn btn-outline-info"
                                 style="margin-right: 0px; width:-webkit-fill-available;"><a
@@ -57,6 +58,7 @@
                     </div>
                     <div class="col-sm-6">
                         <button
+                                [disabled]="true"
                                 [title]="'Excluir informações do medidor - '+row.name"
                                 class="btn btn-outline-danger"
                                 style="margin-right: 0px; width:-webkit-fill-available;"><a
@@ -67,3 +69,32 @@
         </ngx-datatable-column>
     </ngx-datatable>
 </div>
+
+
+<ng-template #addDataset let-modal>
+    <div class="modal-header bg-success">
+        <h4 class="modal-title bg-success text-white" id="modal-basic-title">Adicionar dataset</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span class="text-white" aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form>
+            <div class="form-group">
+                <div class="col-md-12 form-group mb-3">
+                    <label >Nome </label>
+                    <input type="text" class="form-control" [(ngModel)]="selectedDataset.name" [ngModelOptions]="{standalone: true}" >
+                </div>
+                <div class="col-md-12 form-group mb-3">
+                    <label >Descrição</label>
+                    <input type="text" class="form-control" [(ngModel)]="selectedDataset.description" [ngModelOptions]="{standalone: true}">
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-success btn-rounded" (click)="addNew();modal.close('Save click')">Salvar</button>
+        <button type="button" class="btn btn-outline-dark btn-rounded" (click)="modal.close('Save click')">Cancelar</button>
+    </div>
+</ng-template>
+
