--- a/Front/src/app/views/datasets/dataset-info/dataset-info.component.html
+++ b/Front/src/app/views/datasets/dataset-info/dataset-info.component.html
@@ -13,7 +13,7 @@
             <div class="card o-hidden">
                 <div class="card-header bg-primary">
                     <div class="card-title d-flex align-items-center mb-3 text-white">
-                        <span class="font-weight-bold">Amostras</span>
+                        <span class="font-weight-bold">Informações das amostras</span>
                     </div>
                 </div>
                     <app-sample-table [isLoading]="isLoading" [(data)]="samples" [datasetId]="id"  (refreshData)="getSamples()"></app-sample-table>
