--- a/Front/src/app/shared/components/dataset-table/dataset-table.component.html
+++ b/Front/src/app/shared/components/dataset-table/dataset-table.component.html
@@ -1,11 +1,17 @@
 <div class="card o-hidden">
+    <input
+            type="text"
+            style="padding:8px;margin:15px auto;width:30%;"
+            placeholder="Type to filter the name column..."
+            (keyup)="updateFilter($event)"
+    />
     <ngx-datatable
             columnMode="force"
             [footerHeight]="50"
             [headerHeight]="50"
             [messages]="{emptyMessage: 'Nenhum Dataset encontrado'}"
             [rowHeight]="60"
-            [rows]="data"
+            [rows]="rows"
             class="material fullscreen"
             [scrollbarH]="false">
 
@@ -67,6 +73,19 @@
                 </div>
             </ng-template>
         </ngx-datatable-column>
+        <ngx-datatable-footer>
+            <ng-template  ngx-datatable-footer-template>
+                <ngb-pagination
+                    #ngbPage
+                    [boundaryLinks]="true"
+                    [collectionSize]="data.length"
+                    [pageSize]="pageSize"
+                    [page]="currentPage"
+                    [maxSize]="5"
+                    (pageChange)="onPageChanged($event)">
+                </ngb-pagination>
+            </ng-template>
+        </ngx-datatable-footer>
     </ngx-datatable>
 </div>
 
