refresh auto dataset data

--- a/Front/src/app/shared/components/dataset-table/dataset-table.component.html
+++ b/Front/src/app/shared/components/dataset-table/dataset-table.component.html
@@ -13,6 +13,7 @@
             [rowHeight]="60"
             [rows]="rows"
             [loadingIndicator]="loading"
+            [sorts]="[{prop: 'name', dir: 'desc'}]"
             class="material fullscreen"
     >
         <ngx-datatable-column [canAutoResize]="true" [minWidth]="350" [resizeable]="true" [sortable]="true"
