commons project for dockerhub

--- a/Front/src/app/views/datasets/dataset-info/dataset-info.component.html
+++ b/Front/src/app/views/datasets/dataset-info/dataset-info.component.html
@@ -24,7 +24,7 @@
                         </div>
                         <div class="col-md-6 form-group mb-3">
                             <label >Número de amostras </label>
-                            <input type="number" [disabled]="true" class="form-control" [(ngModel)]="dataset.samples.length" [ngModelOptions]="{standalone: true}" >
+                            <input type="number" [disabled]="true" class="form-control" [(ngModel)]="dataset.samples" [ngModelOptions]="{standalone: true}" >
                         </div>
                     </div>
                     <span class="font-weight-bold">Descrição</span>
